--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.12",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
