--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start": "node dist/index.js",
     "live": "tsc --build --watch",
-    "build" : "tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,7 +19,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.0",
     "tsc": "^2.0.4",
-    "typescript": "^5.9.2",
     "zod": "^4.1.1"
   },
   "devDependencies": {
@@ -29,6 +28,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.3.0",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.9.2"
   }
 }
